fixed image spacing

--- a/assets/style.css
+++ b/assets/style.css
@@ -63,11 +63,17 @@
 
 .images{
     width: 80%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .images > img{
-    width:20%;
-    text-align: center;
+    flex-basis: 50%;
+    object-fit: cover;
+    max-width: 35%;
+    max-height: 40%;
+    padding: 5px;
 }
 
 .side > div.work {
